--- a/src/content/posts/all-about-heap-data-structure.mdx
+++ b/src/content/posts/all-about-heap-data-structure.mdx
@@ -1,16 +1,16 @@
 ---
 title: All About Heap Data Structures
 publishedDate: 12/31/2021
-author: Gaurav Thakur
+author: Aman Sehrawat
 tags: Data Structures
 description:
-  Heaps are a special type of complete binary tree which will always return the
-  min/max element. We can make more efficient heaps with the heapify algorithm.
-  Let's learn all about them in this article along with the code samples.
+    Heaps are a special type of complete binary tree which will always return the
+    min/max element. We can make more efficient heaps with the heapify algorithm.
+    Let's learn all about them in this article along with the code samples.
 metaDescription:
-  Heaps are a special type of complete binary tree which will always return the
-  min/max element. Let's learn all about them in this article along with the
-  code samples.
+    Heaps are a special type of complete binary tree which will always return the
+    min/max element. Let's learn all about them in this article along with the
+    code samples.
 ---
 
 A heap is a special type of tree like data structure that will always provide
