--- a/src/content/posts/how-hoisting-works-in-javascript.mdx
+++ b/src/content/posts/how-hoisting-works-in-javascript.mdx
@@ -1,15 +1,15 @@
 ---
 title: How Hoisting Works in JavaScript?
 publishedDate: 12/02/2021
-author: Gaurav Thakur
+author: Aman Sehrawat
 description:
-  Hoisting in JavaScript is a phenomenon where we can access the variables and
-  functions before they are initialized. Let's learn about hosting in JavaScript
-  and how execution context plays an important role in Hoisting.
+    Hoisting in JavaScript is a phenomenon where we can access the variables and
+    functions before they are initialized. Let's learn about hosting in JavaScript
+    and how execution context plays an important role in Hoisting.
 metaDescription:
-  Hoisting in JavaScript is a phenomenon where we can access the variables and
-  functions before they are initialized. Let's learn more about hosting in this
-  article
+    Hoisting in JavaScript is a phenomenon where we can access the variables and
+    functions before they are initialized. Let's learn more about hosting in this
+    article
 tags: JavaScript
 ---
 
@@ -28,7 +28,7 @@ console.log(name); // undefined
 
 var name = 'Gaurav Thakur';
 function sayHello() {
-  console.log('hello');
+    console.log('hello');
 }
 ```
 
