--- a/src/content/posts/how-javascript-array-works-internally.mdx
+++ b/src/content/posts/how-javascript-array-works-internally.mdx
@@ -1,17 +1,17 @@
 ---
 title: How JavaScript Array Works Internally?
 publishedDate: 12/17/2021
-author: Gaurav Thakur
+author: Aman Sehrawat
 tags: JavaScript
 description:
-  Objects in JavaScript are responsible for holding the mapping between
-  key-value pairs. Arrays are a type of object in JavaScript but with only
-  numeric keys. Let us see how JavaScript engine optimizes these special objects
-  with purely numeric keys
+    Objects in JavaScript are responsible for holding the mapping between
+    key-value pairs. Arrays are a type of object in JavaScript but with only
+    numeric keys. Let us see how JavaScript engine optimizes these special objects
+    with purely numeric keys
 metaDescription:
-  Arrays are a type of object in JavaScript but with only numeric keys. Let us
-  see how JavaScript engine optimizes these special objects with purely numeric
-  keys
+    Arrays are a type of object in JavaScript but with only numeric keys. Let us
+    see how JavaScript engine optimizes these special objects with purely numeric
+    keys
 ---
 
 ## Introduction
